--- a/client/app/registrants/add-registrant.html
+++ b/client/app/registrants/add-registrant.html
@@ -10,25 +10,25 @@
                     <div class="form-group" >
                         <label for="fname" class="col-md-3 control-label">First Name</label>
                         <div class="col-md-9">
-                            <input type="text" required class="form-control" ng-model='vm.user.fname' name="fname" placeholder="Enter your first name">
+                            <input type="text" required class="form-control" ng-model='vm.registrant.fname' name="fname" placeholder="Enter your first name">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="lname" class="col-md-3 control-label">Last Name</label>
                         <div class="col-md-9">
-                            <input type="text" class="form-control" required ng-model='vm.user.lname' name="lname" placeholder="Enter your last name">
+                            <input type="text" class="form-control" required ng-model='vm.registrant.lname' name="lname" placeholder="Enter your last name">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="email" class="col-md-3 control-label">Email</label>
                         <div class="col-md-9">
-                            <input type="email" required class="form-control" ng-model='vm.user.email' name="email" placeholder="Enter valid email">
+                            <input type="email" required class="form-control" ng-model='vm.registrant.email' name="email" placeholder="Enter valid email">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="address" class="col-md-3 control-label">Address</label>
                         <div class="col-md-9">
-                            <input type="text" required class="form-control" ng-model='vm.user.address' name="address" placeholder="Enter complete address">
+                            <input type="text" required class="form-control" ng-model='vm.registrant.address' name="address" placeholder="Enter complete address">
                         </div>
                     </div>
                     <div class="form-group">
@@ -36,7 +36,7 @@
                         <div class="col-md-9">
                             <input type="text"  ng-pattern="/^[0-9]+$/"
                                                 required class="form-control"
-                                                ng-model='vm.user.mobile'
+                                                ng-model='vm.registrant.mobile'
                                                 name="mobile"
                                                 validation-msg-pattern="Invalid mobile format"
                                                 placeholder="Enter valid mobile number">
