added delete function

--- a/client/app/registrants/add-registrant.html
+++ b/client/app/registrants/add-registrant.html
@@ -45,7 +45,7 @@
 
                         <!-- Button -->
 
-                            <button type="submit" class="pull-right btn btn-info">Submit</button>
+                            <button type="submit" ng-disabled="regForm.$pristine || regForm.$invalid" class="pull-right btn btn-info">Submit</button>
                 </div>
             </div>
         </div>
