--- a/client/app/registrants/registrants.html
+++ b/client/app/registrants/registrants.html
@@ -29,8 +29,8 @@
                     <td>{{item.address}}</td>
                     <td>{{item.mobile}}</td>
                     <td>
-                        <a ng-click="vm.editUser(list.user_id)" class="btn btn-small btn-primary">edit</a>
-                        <a ng-click="vm.deleteUser(list.user_id)" class="btn btn-small btn-danger">delete</a>
+                        <a class="btn btn-small btn-primary">edit</a>
+                        <a ng-click="vm.deleteRegistrant(item.registrant_id)"  class="btn btn-small btn-danger">delete</a>
                     </td>
                 </tr>
 
